--- a/RAGSeasonsHealth.ipynb
+++ b/RAGSeasonsHealth.ipynb
@@ -43,7 +43,6 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
     "import os\n",
     "import lancedb\n",
     "from langchain_community.vectorstores import LanceDB\n",
@@ -962,7 +961,7 @@
     "    print(f\"ID: {row['id']}\")\n",
     "    print(f\"Text: {row['text']}\")\n",
     "    print(f\"Metadata: {row['metadata']}\")\n",
-    "    print(f\"Vector: {row['vector'][:5]}...\")  # 只显示向量的前5个值\n",
+    "    print(f\"Vector: {row['vector'][:3]}...\")  # 只顯示向量的前3個值\n",
     "    print(\"-\" * 50)\n"
    ]
   },
